--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,17 @@
+root: true
 env:
   browser: true
   commonjs: true
   es6: true
-extends: 'eslint:recommended'
+extends:
+  - 'eslint:recommended'
 plugins:
   - html
 settings:
   html/html-extensions:
   - ".html"
   - ".vue"
+parser: 'babel-eslint'
 parserOptions:
   sourceType: module
 rules:
