--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -77,6 +77,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "bulma": "^0.7.5",
     "cssnano": "^3.10.0",
     "fecha": "^2.3.1",
     "lodash.throttle": "^4.1.1",
