--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "rimraf dist && webpack --progress --hide-modules --config build/webpack.prod.conf.js",
     "lint": "eslint */*.vue */*.js --quiet",
     "lint:css": "stylelint '**/*.vue' --syntax scss",
+    "lint:css:fix" : "stylelint '**/*.vue' --syntax scss --fix",
     "test": "ENV=test mocha-webpack --webpack-config build/webpack.prod.conf.js tests/unit --recursive --require tests/setup.js --reporter nyan --exit"
   },
   "repository": {
@@ -64,7 +65,7 @@
     "style-loader": "^0.19.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-processor-html": "^1.0.0",
+    "stylelint-order": "^3.0.0",
     "stylelint-scss": "^3.8.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^0.4.3",
